# backend/apiserver/api/api_user.go
@@ -35,6 +35,12 @@ func (c *UserApiController) Routes() Routes {
 			"/api/user/{id}",
 			c.GetUser,
 		},
+		{
+			"GetUsers",
+			strings.ToUpper("Get"),
+			"/api/users",
+			c.GetUsers,
+		},
 	}
 }
 
@@ -43,6 +49,17 @@ func (c *UserApiController) GetUser(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	id := params["id"]
 	result, err := c.service.GetUser(id)
+	if err != nil {
+		w.WriteHeader(HttpStatus(err))
+		return
+	}
+
+	EncodeJSONResponse(result, nil, w)
+}
+
+// GetUsers - get all users
+func (c *UserApiController) GetUsers(w http.ResponseWriter, r *http.Request) {
+	result, err := c.service.GetUsers()
 	if err != nil {
 		w.WriteHeader(HttpStatus(err))
 		return
