# backend/apiserver/api/openapi.yaml
@@ -44,6 +44,21 @@ paths:
       summary: get an estate and its trade data
       tags:
       - estate
+  /users:
+    get:
+      operationId: getUsers
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/User'
+                type: array
+          description: success to get all users
+      summary: get all users
+      tags:
+      - user
   /user/{id}:
     get:
       operationId: getUser
@@ -248,8 +263,8 @@ components:
               - type: cross/MsgInitiate
                 value:
                   Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                  Nonce: 0
-                  TimeoutHeight: 149
+                  Nonce: "0"
+                  TimeoutHeight: "149"
                   ContractTransactions:
                   - signers:
                     - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -287,8 +302,8 @@ components:
               - type: cross/MsgInitiate
                 value:
                   Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                  Nonce: 0
-                  TimeoutHeight: 149
+                  Nonce: "0"
+                  TimeoutHeight: "149"
                   ContractTransactions:
                   - signers:
                     - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -329,7 +344,7 @@ components:
                   denom: denom
                 - amount: 0
                   denom: denom
-                gas: 0
+                gas: "200000"
               memo: memo
               signatures:
               - signature: signature
@@ -348,8 +363,8 @@ components:
               - type: cross/MsgInitiate
                 value:
                   Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                  Nonce: 0
-                  TimeoutHeight: 149
+                  Nonce: "0"
+                  TimeoutHeight: "149"
                   ContractTransactions:
                   - signers:
                     - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -387,8 +402,8 @@ components:
               - type: cross/MsgInitiate
                 value:
                   Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                  Nonce: 0
-                  TimeoutHeight: 149
+                  Nonce: "0"
+                  TimeoutHeight: "149"
                   ContractTransactions:
                   - signers:
                     - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -429,7 +444,7 @@ components:
                   denom: denom
                 - amount: 0
                   denom: denom
-                gas: 0
+                gas: "200000"
               memo: memo
               signatures:
               - signature: signature
@@ -500,8 +515,8 @@ components:
             - type: cross/MsgInitiate
               value:
                 Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                Nonce: 0
-                TimeoutHeight: 149
+                Nonce: "0"
+                TimeoutHeight: "149"
                 ContractTransactions:
                 - signers:
                   - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -539,8 +554,8 @@ components:
             - type: cross/MsgInitiate
               value:
                 Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                Nonce: 0
-                TimeoutHeight: 149
+                Nonce: "0"
+                TimeoutHeight: "149"
                 ContractTransactions:
                 - signers:
                   - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -581,7 +596,7 @@ components:
                 denom: denom
               - amount: 0
                 denom: denom
-              gas: 0
+              gas: "200000"
             memo: memo
             signatures:
             - signature: signature
@@ -632,8 +647,8 @@ components:
             - type: cross/MsgInitiate
               value:
                 Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                Nonce: 0
-                TimeoutHeight: 149
+                Nonce: "0"
+                TimeoutHeight: "149"
                 ContractTransactions:
                 - signers:
                   - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -671,8 +686,8 @@ components:
             - type: cross/MsgInitiate
               value:
                 Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                Nonce: 0
-                TimeoutHeight: 149
+                Nonce: "0"
+                TimeoutHeight: "149"
                 ContractTransactions:
                 - signers:
                   - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -713,7 +728,7 @@ components:
                 denom: denom
               - amount: 0
                 denom: denom
-              gas: 0
+              gas: "200000"
             memo: memo
             signatures:
             - signature: signature
@@ -830,8 +845,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -869,8 +884,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -911,7 +926,7 @@ components:
                     denom: denom
                   - amount: 0
                     denom: denom
-                  gas: 0
+                  gas: "200000"
                 memo: memo
                 signatures:
                 - signature: signature
@@ -930,8 +945,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -969,8 +984,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1011,7 +1026,7 @@ components:
                     denom: denom
                   - amount: 0
                     denom: denom
-                  gas: 0
+                  gas: "200000"
                 memo: memo
                 signatures:
                 - signature: signature
@@ -1039,8 +1054,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1078,8 +1093,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1120,7 +1135,7 @@ components:
                     denom: denom
                   - amount: 0
                     denom: denom
-                  gas: 0
+                  gas: "200000"
                 memo: memo
                 signatures:
                 - signature: signature
@@ -1139,8 +1154,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1178,8 +1193,8 @@ components:
                 - type: cross/MsgInitiate
                   value:
                     Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-                    Nonce: 0
-                    TimeoutHeight: 149
+                    Nonce: "0"
+                    TimeoutHeight: "149"
                     ContractTransactions:
                     - signers:
                       - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1220,7 +1235,7 @@ components:
                     denom: denom
                   - amount: 0
                     denom: denom
-                  gas: 0
+                  gas: "200000"
                 memo: memo
                 signatures:
                 - signature: signature
@@ -1278,8 +1293,8 @@ components:
           - type: cross/MsgInitiate
             value:
               Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-              Nonce: 0
-              TimeoutHeight: 149
+              Nonce: "0"
+              TimeoutHeight: "149"
               ContractTransactions:
               - signers:
                 - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1317,8 +1332,8 @@ components:
           - type: cross/MsgInitiate
             value:
               Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-              Nonce: 0
-              TimeoutHeight: 149
+              Nonce: "0"
+              TimeoutHeight: "149"
               ContractTransactions:
               - signers:
                 - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1359,7 +1374,7 @@ components:
               denom: denom
             - amount: 0
               denom: denom
-            gas: 0
+            gas: "200000"
           memo: memo
           signatures:
           - signature: signature
@@ -1383,8 +1398,8 @@ components:
         - type: cross/MsgInitiate
           value:
             Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-            Nonce: 0
-            TimeoutHeight: 149
+            Nonce: "0"
+            TimeoutHeight: "149"
             ContractTransactions:
             - signers:
               - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1422,8 +1437,8 @@ components:
         - type: cross/MsgInitiate
           value:
             Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-            Nonce: 0
-            TimeoutHeight: 149
+            Nonce: "0"
+            TimeoutHeight: "149"
             ContractTransactions:
             - signers:
               - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1464,7 +1479,7 @@ components:
             denom: denom
           - amount: 0
             denom: denom
-          gas: 0
+          gas: "200000"
         memo: memo
         signatures:
         - signature: signature
@@ -1495,8 +1510,8 @@ components:
         type: cross/MsgInitiate
         value:
           Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-          Nonce: 0
-          TimeoutHeight: 149
+          Nonce: "0"
+          TimeoutHeight: "149"
           ContractTransactions:
           - signers:
             - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1548,16 +1563,15 @@ components:
           denom: denom
         - amount: 0
           denom: denom
-        gas: 0
+        gas: "200000"
       properties:
         amount:
           items:
             $ref: '#/components/schemas/Coin'
           type: array
         gas:
-          format: int64
-          minimum: 0
-          type: integer
+          example: "200000"
+          type: string
       required:
       - amount
       - gas
@@ -1591,8 +1605,8 @@ components:
       description: a message type defined by cross
       example:
         Sender: cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
-        Nonce: 0
-        TimeoutHeight: 149
+        Nonce: "0"
+        TimeoutHeight: "149"
         ContractTransactions:
         - signers:
           - cosmos14rvdh4uv8r02nj5dgxxstrahhktqxxj6xnwr0k
@@ -1639,14 +1653,11 @@ components:
             $ref: '#/components/schemas/ContractTransaction'
           type: array
         TimeoutHeight:
-          example: 149
-          format: int64
-          type: integer
+          example: "149"
+          type: string
         Nonce:
-          example: 0
-          format: int64
-          minimum: 0
-          type: integer
+          example: "0"
+          type: string
       required:
       - ChainID
       - ContractTransactions
